--- a/hexoaaa/source/_posts/2018-03-03-git.md
+++ b/hexoaaa/source/_posts/2018-03-03-git.md
@@ -5,7 +5,33 @@ tags:
 categories: "GIT"
 ---
 # **1. git branch -a** 
-    git branch -a 可以查看所有远程分支，但是查看的是你pull时候的样子，如果远程分支现在（在你pull之后）又有新的分支，
-    那么新的分支不会出现。
+    git branch -a 可以查看所有远程分支，但是查看的是你pull时候的样子，如果
+    远程分支现在（在你pull之后）又有新的分支，那么新的分支不会出现。
 # **2. git 协同工作时**
-    任何人的任何从操作都会保留
+    任何人的任何从操作都会保留（lyy）
+# **3. git push -u origin gaga**
+    ==>  git push  origin gaga + gitbranch --set-upstream=origin/gaga master
+    (本地分支master关联远程origin/gaga) 
+
+    作者：王轩
+    链接：https://www.zhihu.com/question/20019419/answer/48434769
+    来源：知乎
+    著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+
+    我不太赞同“脑子需要洗洗了”那位童鞋的说法。以我的记忆来看，upstream不是针对远程仓库的，
+    而是针对branch的，这一点应了那位童鞋所说的第二句话。但是upstream和有几个远程库没有必然联系。
+    比如远程库A上有3个分支branch1、branch2、branch3。远程库B上有3个分支branchx、branchy、branchz。
+    本地仓库有2个分支local1和local2。那么当初始状态时，local1和local2和任何一个分支都没有关联，
+    也就是没有upstream。当通过git branch --set-upstream-to A/branch1 local1命令执行后，
+    会给local1和branch1两个分支建立关联，也就是说local1的upstream指向的是branch1。
+    这样的好处就是在local1分支上执行git push（git pull同理）操作时不用附加其它参数，
+    Git就会自动将local1分支上的内容push到branch1上去。同样，local2分支也可以和远程库A
+    和远程库B上的任何一个分支建立关联，只要给local2分支设置了upstream，就可以在local2分支上
+    用git push（git pull同理）方便地与目标分支推拉数据。综上所述，upstream与有几个远程库没有关系，
+    它是分支与分支之间的流通道。再来说说git push -u和git branch --set-upstream-to指令之间的区别。
+    举个例子：我要把本地分支master与远程仓库origin里的分支gaga建立关联。（如果使用下列途径1的话，首先
+    ，你要切换到master分支上（git checkout master））两个途径：
+    1. git push -u origin gaga  
+    2. git branch --set-upstream-to=origin/gaga master这两种方式都可以达到目的。
+    但是1方法更通用，因为你的远程库有可能并没有gaga分支，这种情况下你用2方法就不可行，连目标分支都不存在，怎么进行关联呢？
+    所以可以总结一下：git push -u origin gaga 相当于 git push origin gaga + git branch --set-upstream-to=origin/gaga master
