--- a/hexoaaa/source/_posts/2018-03-03-git.md
+++ b/hexoaaa/source/_posts/2018-03-03-git.md
@@ -13,8 +13,8 @@ categories: "GIT"
     ==>  git push  origin gaga + gitbranch --set-upstream=origin/gaga master
     (本地分支master关联远程origin/gaga) 
 
-    作者：王轩
-    链接：https://www.zhihu.com/question/20019419/answer/48434769
+    作者：王轩dd
+    [链接：](https://www.zhihu.com/question/20019419/answer/48434769/ "知乎上的")
     来源：知乎
     著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 
