--- a/hexoaaa/source/_posts/2018-03-05-b&&m.md
+++ b/hexoaaa/source/_posts/2018-03-05-b&&m.md
@@ -26,10 +26,12 @@ tags:
 
         child.__super__ = parent.prototype;
 
+        <!-- extend出来的是一个子类（lyy） -->
         return child;
     };
 
      Model.extend = Collection.extend = Router.extend = View.extend = History.extend = extend;
+
 
     ## eg
 
@@ -41,11 +43,22 @@ tags:
 
     var form=new Form();
 
+    不能写成 var form=new Juggler Components.Form.extend({
+        onSubmit:function(){
+
+        }
+    })
+
+
     ## 说明
     Form 相当于SubType,
     而Juggler.Components.Form是SuperType,
     form是Form的实例。
+    child.prototype = new Surrogate;等价于 
+    Form.prototype=new Jugggler.Components.Form;
 
+    _.extend(child.prototype, protoProps);等价于
+    _.extend(Form.prototype,{onSubmit:function(){...}})
 
 
 
