--- a/hexoaaa/source/_posts/2018-03-03-git.md
+++ b/hexoaaa/source/_posts/2018-03-03-git.md
@@ -35,3 +35,24 @@ categories: "GIT"
     2. git branch --set-upstream-to=origin/gaga master这两种方式都可以达到目的。
     但是1方法更通用，因为你的远程库有可能并没有gaga分支，这种情况下你用2方法就不可行，连目标分支都不存在，怎么进行关联呢？
     所以可以总结一下：git push -u origin gaga 相当于 git push origin gaga + git branch --set-upstream-to=origin/gaga master
+
+# 4 git远程版本库回退
+    
+        梧桐那时雨-csdn博客；
+        三种方法
+    1. **自己分支**回滚直接用reset
+    2. **公共分支**回滚用revert
+    3. 错的太远就惊呆吗直接全部删除，用正确代码代替；
+
+    **使用reset不能处理公共分支**。
+        因为：假设A/B是两个不同的人；
+        你(A)本地的版本回退，push到了远程（在此时有人(B)pull代码），
+        远程也回退了。 A1-A2-A3变成了A1;但是B的版本库是A1-A2-B1,B
+        pull再push,远程还是A1-A2-B1
+        
+    使用**revert或者直接全部替换**可以处理回退远程 公共分支
+        因为：用2或者3 A利用revert远程回退,远程是A1-A2-B1变成了A1-A2-B1-A3(
+        A3与A1的内容一样),B的版本库是A1-A2-B1, 
+        pull再push之后，版本是A1-A2-B1-A3-mergeA3,但是mergeA3的代码
+        就是A1和B1的merge;
+
