--- a/hexoaaa/source/_posts/2018-03-05-b&&m.md
+++ b/hexoaaa/source/_posts/2018-03-05-b&&m.md
@@ -54,12 +54,14 @@ tags:
     Form 相当于SubType,
     而Juggler.Components.Form是SuperType,
     form是Form的实例。
-    child.prototype = new Surrogate;等价于 
+    child.prototype = new Surrogate; 
     Form.prototype=new Jugggler.Components.Form;
 
-    _.extend(child.prototype, protoProps);等价于
+    _.extend(child.prototype, protoProps);
     _.extend(Form.prototype,{onSubmit:function(){...}})
 
+    return child;
+    return Form
 
 
 # **二. backbone的reset**
